<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/swarm_background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="2dip" >

        <include layout="@layout/swarm_header_external" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="12dip"
            android:orientation="vertical" >

            <TextView
                style="@style/LightShadow.DarkText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:gravity="left"
                android:text="@string/los_instructions"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="2dip"
                android:paddingLeft="2dip" >

                <TextView
                    style="@style/LightShadow.GreyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:text="@string/email"
                    android:textSize="12dp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="1px"
                    android:layout_weight="1"
                    android:visibility="invisible" />
            </LinearLayout>

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dip"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="8dip"
                android:background="@drawable/blue_button"
                android:padding="9dip"
                android:shadowColor="#000000"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="0.5"
                android:text="@string/los_reset_pass"
                android:textColor="#ffffff"
                android:textSize="16dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/success"
                style="@style/LightShadow.DarkText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/los_sent_pass"
                android:textSize="20dp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_weight="1"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>